[package]
name = "optimize"
version = "0.1.0"
authors = ["Sebastiaan Vermeulen"]

description = "Crate for numerical optimization"
readme = "README.md"

homepage = "https://github.com/sebasv/optimize"
repository = "https://github.com/sebasv/optimize.git"

keywords = ["optimize", "non-linear", "optimization", "numerical"]
categories = ["science"]

license = "MIT/Apache-2.0"

[dependencies]
ndarray = "0.11"
float-cmp = "0.4"